@@ -20,13 +20,36 @@ m4_include([libcurl.m4])
 LIBOFX_MAJOR_VERSION=0
 LIBOFX_MINOR_VERSION=8
 LIBOFX_MICRO_VERSION=4
+LIBOFX_TAG_VERSION="svn"
+
+# let cvs write the revision directly here
+LIBOFX_BUILD_VERSION=`echo "$Rev: 2 $ " | cut -d' ' -f2`
+
+case "$LIBOFX_TAG_VERSION" in
+  cvs|svn)
+     LIBOFX_VERSION_RELEASE_STRING="$LIBOFX_MAJOR_VERSION.$LIBOFX_MINOR_VERSION.$LIBOFX_MICRO_VERSION.r${LIBOFX_BUILD_VERSION}"
+     ;;
+  stable)
+     LIBOFX_VERSION_RELEASE_STRING="$LIBOFX_MAJOR_VERSION.$LIBOFX_MINOR_VERSION.$LIBOFX_MICRO_VERSION"
+     ;;
+  *)
+     LIBOFX_VERSION_RELEASE_STRING="$LIBOFX_MAJOR_VERSION.$LIBOFX_MINOR_VERSION.$LIBOFX_MICRO_VERSION"
+     
+     # add TAG
+     LIBOFX_VERSION_RELEASE_STRING="${LIBOFX_VERSION_RELEASE_STRING}${GWENHYWFAR_VERSION_TAG}"
+     ;;
+esac
+
+
 LIBOFX_VERSION=$LIBOFX_MAJOR_VERSION.$LIBOFX_MINOR_VERSION.$LIBOFX_MICRO_VERSION
 
 AC_SUBST(LIBOFX_MAJOR_VERSION)
 AC_SUBST(LIBOFX_MINOR_VERSION)
 AC_SUBST(LIBOFX_MICRO_VERSION)
+AC_SUBST(LIBOFX_BUILD_VERSION)
+AC_SUBST(LIBOFX_VERSION_RELEASE_STRING)
 AC_SUBST(LIBOFX_VERSION)
-AM_INIT_AUTOMAKE(libofx,$LIBOFX_VERSION)
+AM_INIT_AUTOMAKE(libofx,$LIBOFX_VERSION_RELEASE_STRING)
 
 LIBOFX_SO_CURRENT=4
 LIBOFX_SO_REVISION=0
@@ -339,6 +362,7 @@ AC_OUTPUT(
 			libofx.pc
 			lib/Makefile
 			inc/Makefile
+			inc/libofx.h
 			dtd/Makefile
 			doc/Makefile
 			ofx2qif/Makefile
