@@ -36,11 +36,11 @@
 #define LIBOFX_H
 #include <time.h>
 
-#define LIBOFX_MAJOR_VERSION 0
-#define LIBOFX_MINOR_VERSION 8
-#define LIBOFX_MICRO_VERSION 4
-#define LIBOFX_BUILD_VERSION 2
-#define LIBOFX_VERSION_RELEASE_STRING "0.8.4.r2"
+#define LIBOFX_MAJOR_VERSION @LIBOFX_MAJOR_VERSION@
+#define LIBOFX_MINOR_VERSION @LIBOFX_MINOR_VERSION@
+#define LIBOFX_MICRO_VERSION @LIBOFX_MICRO_VERSION@
+#define LIBOFX_BUILD_VERSION @LIBOFX_BUILD_VERSION@
+#define LIBOFX_VERSION_RELEASE_STRING "@LIBOFX_VERSION_RELEASE_STRING@"
 
 
 #ifdef __cplusplus
